@@ -359,6 +359,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #1119673: Do not override Tkinter.Text methods when creating a
+  ScrolledText.
+
 - Issue #6665: Fix fnmatch to properly match filenames with newlines in them.
 
 - Issue #1135: Add the XView and YView mix-ins to avoid duplicating
